# auto-deprecator

./: .gitignore  .travis.yml  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
auto_deprecator/: __init__.py  auto_deprecator.py  deprecate.py
auto_deprecator/cli/: auto_deprecate.py
docs/: Makefile  conf.py  cycle.xml  index.rst  installation.rst  make.bat  usage.rst
tests/: __init__.py  test_auto_deprecate.py  test_auto_deprecate_class.py  test_auto_deprecate_function.py  test_auto_deprecator.py  test_deprecate_class.py  test_deprecate_function.py
tests/class/: conftest.py  test_auto_deprecate.py  test_deprecate.py
tests/function/: conftest.py  test_auto_deprecate.py  test_auto_deprecate_comments.py  test_deprecate.py  test_deprecate_env_var.py  test_deprecate_error_warn_handler.py  test_deprecate_relocate.py  test_deprecate_version_module.py  test_simple_deprecate.py
tests/test_project/: dummy_class.py  function.py  function_version.py
